# vigil-audio

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  colab.ipynb  pyproject.toml
.streamlit/: config.toml
data/processed/: metadata.csv
docs/: VigilAudio_Fine_Tuning.ipynb  benchmark_report.csv
models/onnx_quantized/: config.json  model_quantized.onnx  ort_config.json
src/: evaluate_checkpoint.py
src/api/: app.py  test_ws.py
src/data/: harmonize.py
src/features/: build_features.py  extractor.py
src/models/: benchmark.py  optimize.py  predict.py  train.py
src/ui/: app.py  app_standalone.py
