[project]
name = "voicevibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "librosa>=0.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
