[project]
name = "vigilaudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.127.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.23.2",
    "optimum[onnxruntime]>=2.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
